hello-app-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-app
        image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0"
        ports:
        - containerPort: 50000
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 50000
            scheme: HTTP
