hello-app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-nodeport
  annotations:
#   cloud.google.com/neg: '{"ingress": true}'
   cloud.google.com/neg: '{"ingress": false}'
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - nodePort: null
      protocol: TCP
      port: 60000
      targetPort: 50000
