nginx-elb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-elb
  annotations:
#    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
  labels:
    app: nginx
spec:
  type: LoadBalancer
#  loadBalancerIP: 10.128.0.250
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
