nginx-ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ilb
  annotations:
    cloud.google.com/backend-config: '{"default": "nginx-backendconfig-internal"}'
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  loadBalancerIP: 10.128.0.62
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
