nginx-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
  #  kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: nginx-nodeport
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-nodeport
            port:
              number: 80
