test-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-internal
  annotations:
    #ingress.gcp.kubernetes.io/pre-shared-cert: "guwenpageself" 
    #kubernetes.io/ingress.global-static-ip-name: "ingress-ip"
    kubernetes.io/ingress.class: "gce-internal"
spec:
  defaultBackend:
    service:
      name: nginx-ilb
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-ilb
            port:
              number: 80
